--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,8 @@
   --main-bgc: #ffffff;
   --second-bgc: #2f303a;
   --third-bgc: #f5f4fa;
+  --main-social-color: #afb1b8;
+  --second-social-color: #ffffff;
 }
 
 body {
@@ -257,6 +259,17 @@ img {
   color: var(--main-text-color);
 }
 
+.features-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 270px;
+  height: 120px;
+  background: var(--second-button-bgc);
+  border-radius: 4px;
+  margin-bottom: 30px;
+}
+
 /* Чем мы занимаемся */
 
 .work-list {
@@ -326,11 +339,46 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
+  margin-bottom: 16px;
 }
 
 .team-card-bottom {
   padding-top: 30px;
   padding-bottom: 30px;
+}
+
+.team-social-list {
+  display: flex;
+  justify-content: center;
+}
+
+.team-social-item {
+  width: 44px;
+  height: 44px;
+}
+
+.team-social-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.team-social-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--main-social-color);
+}
+
+.team-social-icon {
+  fill: currentColor;
+}
+
+.team-social-link:hover,
+.team-social-link:focus {
+  color: var(--second-social-color);
+  background-color: var(--main-button-bgc);
+  border-radius: 50%;
 }
 
 /* Постоянные клиенты */
@@ -346,14 +394,56 @@ img {
   color: var(--second-title-color);
 }
 
+.clients-list {
+  display: flex;
+  justify-content: center;
+}
+
+.clients-list-item {
+  width: 170px;
+  height: 92px;
+}
+
+.clients-list-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.clients-list-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #afb1b8;
+  box-sizing: border-box;
+  border-radius: 4px;
+  color: var(--main-social-color);
+}
+
+.clients-list-icon {
+  fill: currentColor;
+}
+
+.clients-list-link:hover,
+.clients-list-link:focus {
+  color: var(--accent-color);
+  border: 1px solid var(--accent-color);
+}
+
 /* Подвал */
 
 .footer {
   background-color: var(--second-bgc);
+}
+.footer-container {
+  display: flex;
+}
+
+.footer-adress-container {
+  margin-right: 70px;
   padding-top: 60px;
   padding-bottom: 60px;
 }
-
 .footer-logo {
   display: block;
   margin-bottom: 20px;
@@ -394,6 +484,58 @@ img {
 .footer-contact:hover,
 .footer-contact:focus {
   color: var(--accent-color);
+}
+
+.footer-social-container {
+  padding-top: 72px;
+  padding-bottom: 100px;
+}
+
+.footer-social-title {
+  margin-bottom: 20px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--main-title-color);
+}
+
+.footer-social-list {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-social-item {
+  width: 44px;
+  height: 44px;
+}
+
+.footer-social-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.footer-social-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--second-social-color);
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+
+.footer-social-icon {
+  fill: currentColor;
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  color: var(--second-social-color);
+  background-color: var(--main-button-bgc);
+  border-radius: 50%;
 }
 
 /* --- Портфолио--- */
